Jump to menu style fixes and fixed not showing on tablet

--- a/src/plugins/jump-to-menu/assets/css/from-jump-to-menu.css
+++ b/src/plugins/jump-to-menu/assets/css/from-jump-to-menu.css
@@ -1,5 +1,4 @@
 .elementor-widget-jump-to-menu {
-  display: none;
   background-color: #ffffff;
   font-family: "Source Sans Pro";
   color: #000000;
@@ -7,12 +6,7 @@
   z-index: 999;
   top: 0;
   left: 0;
-}
-
-@media (max-width: 767px){
-  .elementor-widget-jump-to-menu {
-    display: block;
-  }
+  margin-top: -1px;
 }
 
 .elementor-widget-jump-to-menu .from-jump-to-menu .from-jump-to-menu-inner .label-jump-to {
@@ -46,14 +40,19 @@
   color: #20438C;
 }
 
-.elementor-widget-jump-to-menu .from-jump-to-menu .dropdown .caret {
+.elementor-widget-jump-to-menu .from-jump-to-menu .dropdown .controls {
+  margin-left: auto;
+}
+
+.elementor-widget-jump-to-menu .from-jump-to-menu .dropdown .controls .caret {
   height: 36px;
   width: 36px;
   background-size: cover;
   background-position: center;
   border: none;
   text-decoration: none;
-  width: 10%;
+  float: right;
+  margin-right: -0.5rem;
 }
 
 .elementor-widget-jump-to-menu .from-jump-to-menu .header {
@@ -71,14 +70,19 @@
   width: 90%;
 }
 
-.elementor-widget-jump-to-menu .from-jump-to-menu .close {
-  height: 36px;
-  width: 36px;
+.elementor-widget-jump-to-menu .from-jump-to-menu .controls {
+  margin-left: auto;
+}
+
+.elementor-widget-jump-to-menu .from-jump-to-menu .controls .close {
+  height: 42px;
+  width: 42px;
   background-size: cover;
   background-position: center;
   border: none;
   text-decoration: none;
-  width: 10%;
+  float: right;
+  margin-right: -0.4rem;
 }
 
 .elementor-widget-jump-to-menu .from-jump-to-menu .close,
